--- a/src/230105_panda_set_up.Rmd
+++ b/src/230105_panda_set_up.Rmd
@@ -48,7 +48,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Set working directory 
 ```{r}
 #change this path to match your paths 
-dir_path <- "~/CR/230321_JLF_Sex_bias_adverse_events/"
+dir_path <- "/data/project/lasseigne_lab/JLF_scratch/230321_JLF_Sex_bias_adverse_events/"
 
 ```
 
@@ -157,5 +157,5 @@ Done in script
 ```{r}
 sinfo <- sessionInfo()
 saveRDS(sinfo, here::here(
-  "results", "ac_results", "230105_panda_setup_sInfo.RDS"))
+  "results","230105_panda_setup_Info.RDS"))
 ```
